Disabled prev/next buttons in BrowseGUI are now hidden. Bugfix: Too many displayed materials (last image was positioned behind the prev image)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@31526 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/touch/src/geogebra/resources/css/styles.css
+++ b/touch/src/geogebra/resources/css/styles.css
@@ -137,10 +137,13 @@ div.button { /* Border */
 		254, 254) ), color-stop(1, rgb(237, 237, 237) ) );
 }
 
-.disabled,
-body .browsegui .fileControlPanel .button.disabled {
+.disabled {
 	opacity: 0.3;
 	filter: alpha(opacity = 30);
+}
+
+body .browsegui .fileControlPanel .button.disabled {
+	visibility: hidden;
 }
 
 .transparent {
